syntax = "proto3";
package rarimo.rarimocore.rootupdater;

import "gogoproto/gogo.proto";

option go_package = "github.com/rarimo/rarimo-core/x/rootupdater/types";

// Params defines the parameters for the module.
message Params {
  string contract_address = 1;
  string root = 2;
  string last_signed_root = 3;
  string last_signed_root_index = 4;
  string event_name = 5;
  int64 root_timestamp = 6;
  uint64 block_height = 7;
}
